add comment event

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,5 +12,5 @@
 
 <div class="container">
   <h1>{{title}}</h1>
-  <router-outlet></router-outlet>
+  <router-outlet (commentClickedSender) = "addComment($event)"></router-outlet>
 </div>
