--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,8 @@
     <ul class="nav navbar-nav navbar-right">
       <li><a routerLink="about">About</a></li>
       <li><a routerLink="topics">Topics</a></li>
+      <li><a routerLink="ask">Ask</a></li>
+
     </ul>
   </div>
 </nav>
