--- a/src/app/topic-list/topic-list.component.html
+++ b/src/app/topic-list/topic-list.component.html
@@ -1,25 +1,27 @@
 
   <h1>Topic List</h1>
-  <p>topics list works</p>
-
+<div>
+  <label>Category</label>
   <select class="filter" (change)="onChangeCategory($event.target.value)">
-    <option value="allCategories" selected="selected" >All Categories</option>
-    <option value="C#">C#</option>
-    <option value="Javascript">Javascript</option>
-    <option value="Angular2">Angular2</option>
-  </select>
+    <option *ngFor="let category of categories" [ngValue]="category">{{category}}</option>
+  </select><br/>
+</div>
 
-  <div *ngFor = "let topic of masterTopicList" class="panel panel-default">
+
+  <div *ngFor = "let topic of topics | categoryFilter:filterByCategory" class="panel panel-default">
     <div class="panel-body">
-    <h3><em>{{topic.topicName}}</em> under {{topic.topicCategory}} category.</h3>
-    <p *ngFor="let comment of topic.comments">
-    {{comment.userName}}</p>
+    <h3><em>{{topic.topicName}}</em> under {{topic.topicCategory}} category. </h3>
+
+    <!-- <p *ngFor="let comment of topic.comments"> Created by:
+    {{comment.userName}}</p> -->
+
+    <a><p>Comments: {{topic.comments.length}}</p></a>
     <button (click) = "displayCommentForm(topic)">Comment</button>
     </div>
   </div>
 
   <div *ngIf="topicToComment" class="hidepanel well">
-    <h3>Topic title goes here</h3>
+    <h3>{{topicToComment.topicName}} {{topicToComment.topicCategory}}</h3>
     <label for="username">Your Name</label>
     <input #newUserName class="form-control">
     <label for="comment">Your Comment</label>
